fix: scrollbar, codeblock, bordes innecesarios eliminados

--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -1,10 +1,11 @@
 :root
-
 *
     background: var(--backgroundColor)
     color: var(--textColor)
     font-family: $akRegular
     box-sizing: border-box
+    scrollbar-width: 5px
+    scrollbar-color: var(--textColor) #f1f1f100
     ::selection
         background: var(--textColor)
         color: var(--backgroundColor)
@@ -21,7 +22,7 @@ h1
     font-size: 2.2em
 
 h2,h3,h4
-    padding: .5em .5em .5em 0
+    margin-top: 1em
 
 h2
     font-size: 2em
@@ -38,7 +39,7 @@ a
 p
     font-size: 1.5em
     max-width: 60ch
-    padding: 0 .5em .5em 0
+    margin-top: .5em
 
 ol
     font-size: 1.5em
@@ -60,3 +61,29 @@ img
 
 ::-webkit-scrollbar 
     display: none
+
+pre
+    margin-top: 1em
+    padding: 1em
+    font-size: 1em
+    border-radius: 8px
+    overflow-x: scroll
+
+code
+    font-family: $code
+
+/* Estilo para Chrome, Safari y Opera */
+::-webkit-scrollbar 
+    width: 2px
+
+
+::-webkit-scrollbar-track 
+    background: #f1f1f1
+
+
+::-webkit-scrollbar-thumb 
+    background: var(--textColor)
+
+
+::-webkit-scrollbar-thumb:hover
+    background: #555
