--- a/src/sass/utilities/_fonts.sass
+++ b/src/sass/utilities/_fonts.sass
@@ -18,8 +18,13 @@
     font-family: "Annek Kanada Thin"
     src: url(./base/fonts/AnekKannada-Light.ttf)
 
+@font-face
+    font-family: "Commit Mono"
+    src: url(./base/fonts/CommitMono.otf)
+
 $akRegular: 'Annek Kanada Regular', serif
 $akThin: 'Annek Kanada Thin', serif
 $victorMonoBold: 'Victor Mono Bold', serif
 $victorMonoMedium: 'Victor Mono Medium', serif
 $victorMonoRegular: 'Victor Mono Regular', serif
+$code: 'Commit Mono', serif
